--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header class="header">
-      <nav class="navbar navbar-expand-lg navbar-light bg-white">
+      <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
           <a class="navbar-brand" href="#">روابي بلادنا</a>
           <button
@@ -34,8 +34,8 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item active">
-                <a class="nav-link" href="index.html">الرئيسية</a>
+              <li class="nav-item">
+                <a class="nav-link active" href="index.html">الرئيسية</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="about.html">عن المصنع</a>
@@ -67,19 +67,23 @@
       <section class="hero py-5">
         <div class="container">
           <div class="row align-items-center min-vh-100">
-            <div class="col-lg-8 mx-auto text-center">
-              <h1 class="display-3 fw-bold mb-4">روابي بلادنا</h1>
-              <p class="lead mb-4">نكهة الطبيعة في كل منتجاتنا</p>
-              <p class="mb-5">
+            <div class="col-lg-8 mx-auto text-center hero-content">
+              <h1 class="hero-title">روابي بلادنا</h1>
+              <p class="hero-subtitle">نكهة الطبيعة في كل منتجاتنا</p>
+              <p class="hero-description">
                 مشروع وطني طموح متخصص في إنتاج منتجات الألبان والأجبان وكريمة
                 الشوكولاتة. نسعى لتحقيق الاكتفاء الذاتي وتعزيز الأمن الغذائي في
                 المملكة من خلال تقديم منتجات عالية الجودة.
               </p>
               <div class="d-grid gap-3 d-sm-flex justify-content-center">
-                <a href="products.html" class="btn btn-primary btn-lg px-4"
+                <a
+                  href="products.html"
+                  class="btn btn-primary btn-lg px-4 hero-btn"
                   >تصفح منتجاتنا</a
                 >
-                <a href="about.html" class="btn btn-outline-light btn-lg px-4"
+                <a
+                  href="about.html"
+                  class="btn btn-outline-light btn-lg px-4 hero-btn"
                   >تعرف علينا</a
                 >
               </div>
